--- a/first-django/templates/index.html
+++ b/first-django/templates/index.html
@@ -9,7 +9,9 @@
   <body>
     <h1>로또 번호 추출기</h1>
     <p>로또 번호를 받아보세요!</p>
-    <button>로또 번호 추출기</button>
+     <form action="">
+            <input type="submit" value="로또 번호 추출하기">
+      </form>
     <p>로또 번호 :  {{ lotto_num }}입니다.</p>
   </body>
 </html>
